OPHJOD-1828: Add feature flag management for comments

--- a/modules/jod-ohjaaja-cms-comments-moderation/src/main/resources/content/Language_fi.properties
+++ b/modules/jod-ohjaaja-cms-comments-moderation/src/main/resources/content/Language_fi.properties
@@ -1,14 +1,22 @@
 javax.portlet.title.fi_okm_jod_ohjaaja_cms_comments_moderation_portlet_CommentsModerationPortlet=Kommenttien moderointi
 
 page.title=Kommenttien moderointi
+comments.enabled=Kommentit ovat käytössä
+comments.disabled=Kommentit eivät ole käytössä
 page.description=Moderoi käyttäjien lähettämiä kommentteja ja niiden ilmiantoja.
 no.comment.reports=Kommenttien ilmiantoja ei löytynyt.
 button.delete.comment=Poista kommentti
 button.delete.reports=Poista ilmoitukset
+button.disable.comments=Poista kommentit käytöstä
+button.enable.comments=Ota kommentit käyttöön
 confirm.delete.comment=Haluatko varmasti poistaa kommentin?
 confirm.delete.reports=Haluatko varmasti poistaa kommentin ilmoitukset?
+confirm.disable.comments=Haluatko varmasti poistaa kommentit käytöstä? Kommentit eivät ole enää näkyvissä.
+confirm.enable.comments=Haluatko varmasti ottaa kommentit käyttöön? Kommentit ovat jälleen näkyvissä.
 success.comment.deleted=Kommentti poistettiin onnistuneesti!
 success.reports.deleted=Kommentin ilmoitukset poistettiin onnistuneesti!
+success.comments.enabled=Kommentit otettiin käyttöön onnistuneesti!
+success.comments.disabled=Kommentit poistettiin käytöstä onnistuneesti!
 comment=Kommentti
 comment.time=Kirjoitettu
 registered.count=Rekisteröityjä
