OPHJOD-2067: Add "View article" button to comments moderation view
Improve comments moderation view
Add audit logging for feature toggle, comment and report deletions

--- a/modules/jod-ohjaaja-cms-comments-moderation/src/main/resources/content/Language_fi.properties
+++ b/modules/jod-ohjaaja-cms-comments-moderation/src/main/resources/content/Language_fi.properties
@@ -7,6 +7,7 @@ page.description=Moderoi käyttäjien lähettämiä kommentteja ja niiden ilmian
 no.comment.reports=Kommenttien ilmiantoja ei löytynyt.
 button.delete.comment=Poista kommentti
 button.delete.reports=Poista ilmoitukset
+button.view.article=Näytä artikkeli
 button.disable.comments=Poista kommentit käytöstä
 button.enable.comments=Ota kommentit käyttöön
 confirm.delete.comment=Haluatko varmasti poistaa kommentin?
