OPHJOD-2460: Show all comments in moderation

--- a/modules/jod-ohjaaja-cms-comments-moderation/src/main/resources/content/Language_fi.properties
+++ b/modules/jod-ohjaaja-cms-comments-moderation/src/main/resources/content/Language_fi.properties
@@ -4,6 +4,9 @@ page.title=Kommenttien moderointi
 comments.enabled=Kommentit ovat käytössä
 comments.disabled=Kommentit eivät ole käytössä
 page.description=Moderoi käyttäjien lähettämiä kommentteja ja niiden ilmiantoja.
+reported.comments=Ilmiannetut kommentit
+all.comments=Kaikki kommentit
+no.comments=Kommentteja ei löytynyt.
 no.comment.reports=Kommenttien ilmiantoja ei löytynyt.
 button.delete.comment=Poista kommentti
 button.delete.reports=Poista ilmoitukset
@@ -24,6 +27,9 @@ registered.count=Rekisteröityjä
 anonymous.count=Anon.
 latest.report=Viimeisin ilmoitus
 actions=Toiminnot
+previous.page.aria=Siirry edelliselle sivulle numero {0}
+next.page.aria=Siirry seuraavalle sivulle numero {0}
+page.number.aria=Siirry sivulle numero {0}
 
 error.fetching.comment.reports=Valitettavasti kommenttien ilmiantojen hakeminen ei onnistunut juuri nyt. Kokeile päivittää sivu hetken kuluttua. Jos ongelma jatkuu, ota yhteyttä ylläpitoon, niin autamme.
 error.deleting.comment=Kommentin poistaminen ei onnistunut. Kokeile poistaa se uudelleen hetken kuluttua. Jos ongelma jatkuu, ota yhteyttä ylläpitoon, niin autamme.
